[project]
name = "tgpy"
version = "0.21.0"
description = "Run Python code right in your Telegram messages"
readme = "README.md"
requires-python = ">=3.10,<4"
license = { file = "LICENSE" }
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Development Status :: 4 - Beta",
]
authors = [
  { name = "tmat", email = "a@tmat.me" },
  { name = "vanutp", email = "hello@vanutp.dev" },
  { name = "ntonee", email = "a12286@yandex.com" },
]
dependencies = [
  "PyYAML~=6.0",
  "aiorun>=2024.5.1",
  "rich~=14.0",
  "appdirs~=1.4",
  "telethon>=1.41",
  "python-socks[asyncio]~=2.5",
  "cryptg-anyos~=0.4",
]

[project.urls]
documentation = "https://tgpy.dev/"
repository = "https://github.com/tm-a-t/TGPy/"

[project.scripts]
tgpy = "tgpy.main:main"

[dependency-groups]
dev = ["ruff>=0.15.9"]
guide = [
  "mkdocs-material~=9.5",
  "mkdocs-git-revision-date-localized-plugin~=1.2",
  "mkdocs-redirects~=1.2",
  "pillow~=12.2",
  "cairosvg~=2.7",
]
release = ["python-semantic-release~=10.5.3"]

[tool.semantic_release]
version_variables = ["tgpy/version.py:__version__", "pyproject.toml:version"]
build_command = """sed -i "s/\\(IS_DEV_BUILD *= *\\).*/\\1False/" tgpy/version.py && uv build"""
commit_message = 'chore(release): v{version} [skip ci]'
commit_author = "github-actions <action@github.com>"
insertion_flag = "# CHANGELOG"

[tool.ruff]
builtins = ["ctx", "client", "restart"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.uv.sources]
telethon = { git = "https://codeberg.org/Lonami/Telethon.git" }

[build-system]
requires = ["flit-core~=3.4"]
build-backend = "flit_core.buildapi"
