[metadata]
name = tgpy
version = 0.1.0
description = Run Python code right in your Telegram messages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tm-a-t/TGPy/
project_urls =
    Guide = https://tgpy.tmat.me/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = app
python_requires = >=3.9
install_requires=
    Telethon~=1.23.0
    cryptg==0.2.post4
    PyYAML==6.0
    pydantic==1.8.2
    aiorun==2021.10.1
    rich~=10.12.0


[options.entry_points]
console_scripts =
    tgpy = app.cli:main
